@@ -161,6 +161,45 @@ EXAMPLE4
      # Linia M3
      # Linia M4
 
+EXAMPLE5
+     # Pragmas.
+     use strict;
+     use warnings;
+
+     # Modules.
+     use Encode qw(encode_utf8);
+     use Map::Tube::Bucharest;
+
+     # Arguments.
+     if (@ARGV < 1) {
+             print STDERR "Usage: $0 line\n";
+             exit 1;
+     }
+     my $line = $ARGV[0];
+
+     # Object.
+     my $obj = Map::Tube::Bucharest->new;
+
+     # Get stations for line.
+     my $stations_ar = $obj->get_stations($line);
+
+     # Print out.
+     map { print encode_utf8($_->name)."\n"; } @{$stations_ar};
+
+     # Output:
+     # Usage: ex5.pl line
+
+     # Output with 'foo' argument.
+     # Map::Tube::get_stations(): ERROR: Invalid Line Name [foo]. (status: 105) file ex5.pl on line 20
+
+     # Output with 'Linia M4' argument.
+     # Gara de Nord 2
+     # Basarab
+     # Grivița
+     # 1 Mai
+     # Jiului
+     # Parc Bazilescu
+
 DEPENDENCIES
     File::Share, Map::Tube, Moo, namespace::clean.
 
