@@ -1,4 +1,5 @@
 0.09
+ - Add EXAMPLE5 section to doc.
 
 0.08 2015-10-23T10:20:03+02:00
  - Implement station order.
